# hs2cpp

./: README.md  hs2cpp.cabal
Examples/: .gitignore  Config.hs  measure_exec_times.bat  test.c
HaskellToMacro/: AnalyzeCore.hs  Annotations.hs  ConvertBindings.hs  ConvertModule.hs  LetToLambda.hs  Macro.hs  MacroGen.hs  Plugin.hs  Predefined.hs  Prelude.hs  PrettyPrint.hs  StdLib.hs  Tokens.hs  Transform.hs
LetToLambda/: lettolambda.cabal
LetToLambda/LetToLambda/: LetToLambda.hs  Plugin.hs
LetToLambda/Tests/: NonRec.hs  Rec.hs
Tests/: .gitignore  AnnotationClass.hs  AutoWrap.hs  BoostReplacedFunction.hs  CaseADT.hs  CaseApply.hs  CasePrim.hs  Class.hs  CodeCreation.hs  Ctor.hs  Demo.hs  Exceptions.hs  HighLevelFun.hs  HighLevelFunUse.hs  Identity.hs  Imported.hs  Importer.hs  ListFunctions.hs  LocalFunction.hs  MutualRecursion.hs  NameShadowing.hs  Newtype.hs  PrimeCheck.hs  Recursion.hs  RecursiveLet.hs  SimpleLet.hs  Tester.hs  TextHandling.hs  Tuple.hs  Values.hs
