name:                hs2cpp
version:             0.1.0.0
synopsis:            Compiles a subset of Haskell to C preprocessor macros
-- description:
license:             BSD3
author:              Boldizsar Nemeth, Mate Karacsony
maintainer:          nboldi@caesar.elte.hu, kmate@caesar.elte.hu
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     HaskellToMacro.Plugin
                     , HaskellToMacro.AnalyzeCore
                     , HaskellToMacro.Annotations
                     , HaskellToMacro.ConvertModule
                     , HaskellToMacro.ConvertBindings
                     , HaskellToMacro.PrettyPrint
                     , HaskellToMacro.LetToLambda
                     , HaskellToMacro.Macro
                     , HaskellToMacro.MacroGen
                     , HaskellToMacro.Predefined
                     , HaskellToMacro.Prelude
                     , HaskellToMacro.StdLib
                     , HaskellToMacro.Tokens
                     , HaskellToMacro.Transform
  ghc-options:       -fwarn-unused-imports
                     -fwarn-unused-binds
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4.8 && < 4.9
                     , ghc >= 7.2
                     , containers
                     , transformers
                     , uniplate
                     , mtl
                     , bytestring
  -- hs-source-dirs:
  default-language:    Haskell2010
