
name:                lettolambda
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
author:              Boldizsar Nemeth
maintainer:          nboldi@caesar.elte.hu
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     LetToLambda.Plugin
                     , LetToLambda.LetToLambda
  ghc-options:       -fwarn-unused-imports
                     -fwarn-unused-binds
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >= 4.7 && < 4.8
                     , ghc >= 7.2
                     , containers
                     , transformers
                     , uniplate
                     , mtl
                     , bytestring
  -- hs-source-dirs:      
  default-language:    Haskell2010